--- a/우주과학통계실습/11주차.ipynb
+++ b/우주과학통계실습/11주차.ipynb
@@ -40,7 +40,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "xdata = np.array([65, 75, 85, 95, 105])\n",
+    "ydata = np.array([-20,17,  42, 94, 127])\n",
+    "\n",
+    "result = linregress(xdata, ydata)\n",
+    "A = result.intercept\n",
+    "B = result.slope\n"
+   ]
   }
  ],
  "metadata": {
